<resources>
    <string name="app_name">almes-pda-client</string>
    <string name="btn_machine_task">机列任务</string>
    <string name="btn_sawing">锯床任务</string>
    <string name="btn_milling">铣床任务</string>
    <string name="action_search">搜索</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="title">明泰铝业</string>
    <string name="subtitle">高精生产管理系统</string>
    <string name="product_card_no">批号：</string>
    <string name="product_process_step">工序：</string>
    <string name="product_work_center">工作中心：</string>
    <string name="product_work_group">班组：</string>
    <string name="product_work_group_leader">组长：</string>
    <string name="product_equipment">设备：</string>
    <string name="product">开工</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="yes">确认</string>
    <string name="add">增加</string>
    <string name="remove">删除</string>
    <string name="complete">完工</string>
    <string name="complete_alloy_grade">合金牌号：</string>
    <string name="complete_alloy_temper">合金状态：</string>
    <string name="complete_product_no">卷号：</string>
    <string name="complete_order_nos">合同编号：</string>
    <string name="complete_product_name">产品名称：</string>
    <string name="complete_gross_weight">来料毛重：</string>
    <string name="complete_incoming_situation">来料情况：</string>
    <string name="complete_note">备注：</string>
    <string name="complete_paramter">工序参数：</string>
    <string name="complete_claim">加工要求：</string>
    <string name="complete_dc">道次：</string>
    <string name="complete_net_weight">来料净重：</string>
    <string name="product_no">标识：</string>
    <string name="thick">厚：</string>
    <string name="width">宽：</string>
    <string name="length">长：</string>
    <string name="gross_weight">毛重：</string>
    <string name="net_weight">净重：</string>
    <string name="tare_weight">皮重：</string>
    <string name="pipe_weight">筒重：</string>
    <string name="film_weight">膜重：</string>
    <string name="slices">片数：</string>
    <string name="pipe_type">套筒：</string>
    <string name="product_type">片/卷：</string>
    <string name="self_test_results">自检结果：</string>
    <string name="surface_after_processing">加工后表面：</string>
    <string name="plate_after_processing">加工后板型：</string>
</resources>
