<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductActivity">

    <Button
        android:id="@+id/bt_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        android:text="@string/product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/product_card_no"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_pch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/product_process_step"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_gx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/product_work_center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_gzzx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/product_work_group"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_bz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/product_work_group_leader"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_bzz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="90sp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/product_equipment"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_sb"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>